<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ShoppingCart</groupId>
  <artifactId>ShoppingCart</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <dependencies>
  
	<dependency>
        <groupId>org.eclipse.angus</groupId>
        <artifactId>angus-mail</artifactId>
        <version>2.0.2</version>
    </dependency>
    <dependency>
        <groupId>org.eclipse.angus</groupId>
        <artifactId>angus-activation</artifactId>
        <version>2.0.1</version>
    </dependency>

	<!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
	
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>24-ea+15</version>
    </dependency>
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>24-ea+15</version>
    </dependency>
     <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-base</artifactId>
        <version>24-ea+15</version>
    </dependency>
     <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>24-ea+15</version>
    </dependency>

  </dependencies>
  

  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>24</release>
          <compilerArgs>
              --module-path ${javafx.path}
              --add-modules=javafx.controls,javafx.fxml, javafx.base, javafx.graphics
           </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
  		<groupId>org.openjfx</groupId>
  		<artifactId>javafx-maven-plugin</artifactId>
  		<version>0.0.8</version>
  		<configuration>
   		 <mainClass>your.main.class</mainClass>
  		</configuration>
		</plugin>

    </plugins>
  </build>
</project>